--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "clsx": "^2.1.0",
     "html-react-parser": "^5.1.10",
     "lucide-react": "^0.365.0",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.2",
